emf-state-machine/src/snapshots/emf_state_machine__input_document__tests__valid_input_document2.snap
---
source: emf-state-machine/src/input_document.rs
expression: state_schema

---
{
  "jobs": {
    "add_mds1": {
      "name": "Add Mds1",
      "needs": [],
      "steps": [
        {
          "action": "host.add",
          "id": "step1",
          "inputs": {
            "fqdn": "mds1"
          },
          "outputs": {
            "id": "this.id"
          }
        }
      ]
    },
    "configure_lnet": {
      "name": "configure lnet",
      "needs": [
        "add_mds1"
      ],
      "steps": [
        {
          "action": "lnet.configure",
          "id": "step1",
          "inputs": {
            "host_id": "${{needs.add_mds1.step1.outputs.id}}",
            "path": "/dev/sfa/sda1"
          },
          "outputs": null
        }
      ]
    }
  },
  "dry_run": true,
  "timeout": null,
  "refresh": false
}
